k8s/kustomize/tiddlywiki/namespace.yaml
#
# nimbus
# do k8s sg cluster definitions
#
apiVersion: v1
kind: Namespace
metadata:
  name: tiddlywiki
