k8s/kustomize/tiddlywiki/service.yaml
#
# nimbus
# tiddlywiki
#

apiVersion: v1
kind: Service
metadata:
  name: tiddlywiki
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: oauth2-http
    protocol: TCP
  - name: sftp
    port: 22
    targetPort: sftp
    protocol: TCP
