k8s/kustomize/tiddlywiki/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tiddlywiki
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
spec:
  tls:
  - hosts:
    - wiki.mrzzy.co
    secretName: tiddlywiki-tls # pragma: allowlist secret
  rules:
  - host: wiki.mrzzy.co
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tiddlywiki
            port:
              name: http
